# mmm

./: .gitignore  README.md  pyproject.toml
docs/: torch-on-aurora.md
src/mmm/: __about__.py  __init__.py  checkpoint.py  configs.py  float8.py  metrics.py  optimizer.py  profiling.py  train.py  utils.py
src/mmm/data/: __init__.py  download_tokenizer.py  fake.py  hf_datasets.py  llama.py  text.py  vision.py
src/mmm/data/tokenizer/: __init__.py  tiktoken.py
src/mmm/examples/: fsdp.py  fsdp_tp.py  vit.py
src/mmm/examples/fsdp/: example.py
src/mmm/models/: __init__.py  llama.py  norms.py
src/mmm/models/llama/: __init__.py  model.py
src/mmm/models/vit/: attention.py
src/mmm/parallelisms/: __init__.py  parallel_dims.py  parallelize_llama.py  pipeline_llama.py  pipelining_utils.py  utils.py
src/mmm/trainer/: fsdp.py  vit.py
train_configs/: debug_model.toml  llama3_8b.toml
